--- a/env.template
+++ b/env.template
@@ -8,7 +8,7 @@ NETWORKING=bridge
 RESTART_POLICY=always
 
 # build variables default
-MONITORRENT_VERSION=v0.0.3-alpha.2
+MONITORRENT_VERSION=1.0.0-beta.1
 
 # Makefile required
 PORTS=\
