--- a/env.template
+++ b/env.template
@@ -8,7 +8,7 @@ NETWORKING=bridge
 RESTART_POLICY=always
 
 # build variables default
-MONITORRENT_VERSION=1.0.0-beta.1
+MONITORRENT_VERSION=1.0.0-rc.0
 
 # Makefile required
 PORTS=\
