Update to version 1.0.0

--- a/env.template
+++ b/env.template
@@ -1,6 +1,6 @@
 # host variables
 DB=/path/to/monitorrent/db
-PORT=5000
+PORT=6687
 
 # change it for different container name
 CONTAINER_NAME=monitorrent
@@ -8,11 +8,11 @@ NETWORKING=bridge
 RESTART_POLICY=always
 
 # build variables default
-MONITORRENT_VERSION=1.0.0-rc.3
+MONITORRENT_VERSION=1.0.0
 
 # Makefile required
 PORTS=\
-  -p $(PORT):5000
+  -p $(PORT):6687
 VOLUMES=\
   -v $(DB):/var/www/monitorrent/monitorrent.db
 NETWORK=--net=$(NETWORKING)
