Added PySocks dependency to support SOCKS% proxy in docker container

--- a/Dockerfile.x86
+++ b/Dockerfile.x86
@@ -3,6 +3,7 @@ MAINTAINER Alexander Puzynia <werwolf.by@gmail.com>
 
 COPY monitorrent/requirements.txt /var/www/monitorrent/requirements.txt
 RUN pip install --no-cache-dir -r /var/www/monitorrent/requirements.txt
+RUN pip install PySocks
 COPY monitorrent /var/www/monitorrent
 
 WORKDIR /var/www/monitorrent
